Mantis ChangeLog

2004.xx.xx  -  0.18.1

 * Fix #3467: Delete user ends up at user not found error.
 * Fix #3475: Reopen bug to custom status possibility.
 * Fix #3479: Reset account preferences of a user results in reset administrators (current) account.
 * Fix #3493: Missing string $s_bug_deleted in German (and some other) translation
 * Fix #3495: Warning even if administrator account is disabled.
 * Fix #3501: No output for print_all_bug_page.php when status=closed, and Hide Status Closed is selected.
 * Updated copyright to include 2004

2003.12.08  -  0.18.0

 * Fix #3207: LDAP mail lookup was looking for the 'email' attribute instead of the 'mail' attribute.
 * Enh #3335: Added Estonian Language (thanks to Villem Vannas).
 * Fix #3310: Sorting of projects in menu bar.
 * Fix #3330: "Required" fields on Account Profile page.
 * Fix #3333: Support PHPMailer v1.7x.
 * Fix #3334: Invalid links in bug reminder emails.
 * Fix #3353: History not updated in bug deletion email.
 * Fix #3389: Problems upgrading existing users to administrator.
 * Fix #3417: Setting $g_manage_news_threshold to 'DEVELOPER' can't add new news.
 * Fix #3421: Users except admin can 'see' the projects disabled on the project bar.
 * Sec #0000: Various Cross-Site Scripting vulnerabilities fixed (thanks to Paul Richards).
 * Languages: Updated French localisation.

2003.08.24  -  0.18.0rc1

 * Enh #0000: New config option(user_login_valid_regex): regular expression used to validate new login names
 * Enh #0000: Added error_proceed_url() to allow pages to give a url to proceed to after displaying the next error
 * Enh #0000: Implemented parameterized error messages.  Error strings are passed through sprintf() and are parameterized with the values given to error_parameters()
 * Enh #0000: Allow spaces and hyphens in login names.
 * Enh #0000: Optimized the database query in file_list_attachments() to improve performance of viewing bugs with large attachments.